feat:添加调试命令